--- a/src/less/tables.less
+++ b/src/less/tables.less
@@ -55,6 +55,7 @@ table.checkable > thead th {
 table.checkable > thead th a {
 	display: inline-block;
 	padding: 7px 10px;
+	vertical-align: middle;
 }
 
 table.checkable > tbody > tr:hover {
